src/LogiX/Minimal/ActionSequencing/ANTLR/ActionSequenceParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\RichieZ\repos\logix\src\LogiX\Minimal\ActionSequencing\ANTLR\ActionSequence.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace LogiX.Minimal.ActionSequencing {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class ActionSequenceParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, BINARY_LITERAL=19, HEX_LITERAL=20, DECIMAL_LITERAL=21, STRING_LITERAL=22, 
		PIN_ID=23, WHITESPACE=24, LINECOMMENT=25;
	public const int
		RULE_program = 0, RULE_actionSequence = 1, RULE_action = 2, RULE_wait = 3, 
		RULE_assignment = 4, RULE_end = 5, RULE_continue = 6, RULE_print = 7, 
		RULE_push = 8, RULE_exp = 9, RULE_literalexp = 10, RULE_ramexp = 11, RULE_pinexp = 12, 
		RULE_boolexp = 13;
	public static readonly string[] ruleNames = {
		"program", "actionSequence", "action", "wait", "assignment", "end", "continue", 
		"print", "push", "exp", "literalexp", "ramexp", "pinexp", "boolexp"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'wait'", "' '", "'set'", "'='", "'end'", "'continue'", "'print'", 
		"'push'", "','", "'['", "']'", "'=='", "'!='", "'&&'", "'||'", "'('", 
		"')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "BINARY_LITERAL", "HEX_LITERAL", 
		"DECIMAL_LITERAL", "STRING_LITERAL", "PIN_ID", "WHITESPACE", "LINECOMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ActionSequence.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ActionSequenceParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ActionSequenceParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ActionSequenceParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ActionSequenceContext actionSequence() {
			return GetRuleContext<ActionSequenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ActionSequenceParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28;
			actionSequence();
			State = 29;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionSequenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ActionContext[] action() {
			return GetRuleContexts<ActionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionContext action(int i) {
			return GetRuleContext<ActionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WHITESPACE() { return GetTokens(ActionSequenceParser.WHITESPACE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITESPACE(int i) {
			return GetToken(ActionSequenceParser.WHITESPACE, i);
		}
		public ActionSequenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionSequence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionSequence(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionSequenceContext actionSequence() {
		ActionSequenceContext _localctx = new ActionSequenceContext(Context, State);
		EnterRule(_localctx, 2, RULE_actionSequence);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 31;
				action();
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==WHITESPACE) {
					{
					{
					State = 32;
					Match(WHITESPACE);
					}
					}
					State = 37;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				}
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WaitContext wait() {
			return GetRuleContext<WaitContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ContinueContext @continue() {
			return GetRuleContext<ContinueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintContext print() {
			return GetRuleContext<PrintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PushContext push() {
			return GetRuleContext<PushContext>(0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionContext action() {
		ActionContext _localctx = new ActionContext(Context, State);
		EnterRule(_localctx, 4, RULE_action);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
				{
				State = 42;
				assignment();
				}
				break;
			case T__1:
				{
				State = 43;
				wait();
				}
				break;
			case T__5:
				{
				State = 44;
				end();
				}
				break;
			case T__6:
				{
				State = 45;
				@continue();
				}
				break;
			case T__7:
				{
				State = 46;
				print();
				}
				break;
			case T__8:
				{
				State = 47;
				push();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 50;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WaitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BoolexpContext boolexp() {
			return GetRuleContext<BoolexpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DECIMAL_LITERAL() { return GetToken(ActionSequenceParser.DECIMAL_LITERAL, 0); }
		public WaitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_wait; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWait(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WaitContext wait() {
		WaitContext _localctx = new WaitContext(Context, State);
		EnterRule(_localctx, 6, RULE_wait);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			Match(T__1);
			State = 53;
			Match(T__2);
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__16:
			case BINARY_LITERAL:
			case HEX_LITERAL:
			case PIN_ID:
				{
				State = 54;
				boolexp(0);
				}
				break;
			case DECIMAL_LITERAL:
				{
				State = 55;
				Match(DECIMAL_LITERAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PinexpContext pinexp() {
			return GetRuleContext<PinexpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RamexpContext ramexp() {
			return GetRuleContext<RamexpContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 8, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			Match(T__3);
			State = 59;
			Match(T__2);
			State = 62;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 60;
				pinexp();
				}
				break;
			case 2:
				{
				State = 61;
				ramexp();
				}
				break;
			}
			State = 64;
			Match(T__4);
			State = 65;
			exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EndContext : ParserRuleContext {
		public EndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_end; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EndContext end() {
		EndContext _localctx = new EndContext(Context, State);
		EnterRule(_localctx, 10, RULE_end);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContinueContext : ParserRuleContext {
		public ContinueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_continue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContinue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContinueContext @continue() {
		ContinueContext _localctx = new ContinueContext(Context, State);
		EnterRule(_localctx, 12, RULE_continue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(ActionSequenceParser.STRING_LITERAL, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintContext print() {
		PrintContext _localctx = new PrintContext(Context, State);
		EnterRule(_localctx, 14, RULE_print);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(T__7);
			State = 72;
			Match(T__2);
			State = 73;
			Match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PushContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIN_ID() { return GetToken(ActionSequenceParser.PIN_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BoolexpContext boolexp() {
			return GetRuleContext<BoolexpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DECIMAL_LITERAL() { return GetToken(ActionSequenceParser.DECIMAL_LITERAL, 0); }
		public PushContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_push; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPush(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PushContext push() {
		PushContext _localctx = new PushContext(Context, State);
		EnterRule(_localctx, 16, RULE_push);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			Match(T__8);
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__2) {
				{
				{
				State = 76;
				Match(T__2);
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 82;
			Match(PIN_ID);
			State = 83;
			Match(T__9);
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__2) {
				{
				{
				State = 84;
				Match(T__2);
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 92;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__16:
			case BINARY_LITERAL:
			case HEX_LITERAL:
			case PIN_ID:
				{
				State = 90;
				boolexp(0);
				}
				break;
			case DECIMAL_LITERAL:
				{
				State = 91;
				Match(DECIMAL_LITERAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PinexpContext pinexp() {
			return GetRuleContext<PinexpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RamexpContext ramexp() {
			return GetRuleContext<RamexpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LiteralexpContext literalexp() {
			return GetRuleContext<LiteralexpContext>(0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpContext exp() {
		ExpContext _localctx = new ExpContext(Context, State);
		EnterRule(_localctx, 18, RULE_exp);
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 94;
				pinexp();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 95;
				ramexp();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 96;
				literalexp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LiteralexpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BINARY_LITERAL() { return GetToken(ActionSequenceParser.BINARY_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEX_LITERAL() { return GetToken(ActionSequenceParser.HEX_LITERAL, 0); }
		public LiteralexpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literalexp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteralexp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LiteralexpContext literalexp() {
		LiteralexpContext _localctx = new LiteralexpContext(Context, State);
		EnterRule(_localctx, 20, RULE_literalexp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			_la = TokenStream.LA(1);
			if ( !(_la==BINARY_LITERAL || _la==HEX_LITERAL) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RamexpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIN_ID() { return GetToken(ActionSequenceParser.PIN_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEX_LITERAL() { return GetToken(ActionSequenceParser.HEX_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BINARY_LITERAL() { return GetToken(ActionSequenceParser.BINARY_LITERAL, 0); }
		public RamexpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ramexp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRamexp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RamexpContext ramexp() {
		RamexpContext _localctx = new RamexpContext(Context, State);
		EnterRule(_localctx, 22, RULE_ramexp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			Match(PIN_ID);
			State = 102;
			Match(T__10);
			State = 103;
			_la = TokenStream.LA(1);
			if ( !(_la==BINARY_LITERAL || _la==HEX_LITERAL) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 104;
			Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PinexpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIN_ID() { return GetToken(ActionSequenceParser.PIN_ID, 0); }
		public PinexpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pinexp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPinexp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PinexpContext pinexp() {
		PinexpContext _localctx = new PinexpContext(Context, State);
		EnterRule(_localctx, 24, RULE_pinexp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(PIN_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoolexpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext[] exp() {
			return GetRuleContexts<ExpContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BoolexpContext[] boolexp() {
			return GetRuleContexts<BoolexpContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BoolexpContext boolexp(int i) {
			return GetRuleContext<BoolexpContext>(i);
		}
		public BoolexpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boolexp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IActionSequenceVisitor<TResult> typedVisitor = visitor as IActionSequenceVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolexp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BoolexpContext boolexp() {
		return boolexp(0);
	}

	private BoolexpContext boolexp(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		BoolexpContext _localctx = new BoolexpContext(Context, _parentState);
		BoolexpContext _prevctx = _localctx;
		int _startState = 26;
		EnterRecursionRule(_localctx, 26, RULE_boolexp, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 109;
				exp();
				State = 110;
				Match(T__12);
				State = 111;
				exp();
				}
				break;
			case 2:
				{
				State = 113;
				exp();
				State = 114;
				Match(T__13);
				State = 115;
				exp();
				}
				break;
			case 3:
				{
				State = 117;
				Match(T__16);
				State = 118;
				boolexp(0);
				State = 119;
				Match(T__17);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 135;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 133;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
					case 1:
						{
						_localctx = new BoolexpContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_boolexp);
						State = 123;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 124;
						Match(T__2);
						State = 125;
						Match(T__14);
						State = 126;
						Match(T__2);
						State = 127;
						boolexp(4);
						}
						break;
					case 2:
						{
						_localctx = new BoolexpContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_boolexp);
						State = 128;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 129;
						Match(T__2);
						State = 130;
						Match(T__15);
						State = 131;
						Match(T__2);
						State = 132;
						boolexp(3);
						}
						break;
					}
					} 
				}
				State = 137;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 13: return boolexp_sempred((BoolexpContext)_localctx, predIndex);
		}
		return true;
	}
	private bool boolexp_sempred(BoolexpContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(Context, 3);
		case 1: return Precpred(Context, 2);
		}
		return true;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
} // namespace LogiX.Minimal.ActionSequencing
